--- a/index.html
+++ b/index.html
@@ -93,103 +93,114 @@
 		<section class="about">
 			<div class="row">
 				<div class="col-12 section-header">
-					<h2 class="text-lg text-center section-header">About Our Studio</h2>
-                    	<hr class="block-divider block-divider--short block-divider--black">
+					<h2 class="text-lg text-center section-header">About</h2>
+					<hr class="block-divider block-divider--short block-divider--black">
 				</div>
 			</div>
-                <div class="container container-fixed">
-                <div class="row">
-				<div class="flex-column col-12 col-md-6 col-lg-4">
-					<div class="about">
-						<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
-						<p class="about-content">Founded in 2007, Infinity Yoga Studio is the perfect place to escape
-							the hustle & bustle of everyday life. Our class list includes Yin, Reiki and Restorative, so
-							you can finally feel at peace!</p>
-					</div>
+			<div class="row">
+				<div class="flex-column col-12">
 				</div>
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="about">
-						<h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
-						<p class="about-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-							tempor incididunt
-							ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-							ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-					</div>
+				<div class="flex-column col-12">
+					<p class="text-md-center font-weight-normal font-italic">
+						Peace, love & infinity since 2007.
+					</p>
 				</div>
-				<div class="col-12 col-md-6 col-lg-4">
-					<div class="about">
-						<h3 class="about-header text-center"><i class="fas fa-infinity d-none d-sm-block"></i> Infinity
-						</h3>
-						<p class="about-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-							tempor incididunt
-							ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-							ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+			</div>
+			<br>
+			<div class="container container-fixed">
+				<div class="row">
+					<div class="flex-column col-12 col-md-6 col-lg-4">
+						<div class="about">
+							<h3 class="about-header"><i class="fas fa-peace d-none d-sm-block"></i> Peace</h3>
+							<p class="about-content">Founded in 2007, Infinity Yoga Studio is the perfect place to
+								escape
+								the hustle & bustle of everyday life. Our class list includes Yin, Reiki and
+								Restorative, so
+								you can finally feel at peace!</p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="about">
+							<h3 class="about-header"><i class="fas fa-heart d-none d-sm-block"></i> Love</h3>
+							<p class="about-content"> Located in the heart of NYC, Infinity is the only place where you can leave your stress outside while you inhale the love from the around you & exhale that positive energy right back at them.</p>
+						</div>
+					</div>
+					<div class="col-12 col-md-6 col-lg-4">
+						<div class="about">
+							<h3 class="about-header text-center"><i class="fas fa-infinity d-none d-sm-block"></i>
+								Infinity
+							</h3>
+							<p class="about-content">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+								eiusmod
+								tempor incididunt
+								ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+								ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+						</div>
 					</div>
 				</div>
 			</div>
-        </div>
-	</section>
+		</section>
 		<!-- /.about -->
 	</div>
 
-            
-    <div class="container container-fixed">
+
+	<div class="container container-fixed">
 		<!-- Quotes -->
-			<section class="quotes">
-				<div class="row">
-					<div class="col-12 page header">
-						<h2 class="quotes-header">User Stories</h2>
-						<hr class="block-divider block-divider--short block-divider--black">
+		<section class="quotes">
+			<div class="row">
+				<div class="col-12 page header">
+					<h2 class="quotes-header">User Stories</h2>
+					<hr class="block-divider block-divider--short block-divider--black">
+				</div>
+			</div>
+			<div class="card-deck">
+				<div class="card">
+					<img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
+					<div class="card-body">
+						<blockquote class="blockquote">
+							<p class="card-text text-small">Infinity Studio is the best! I can always find a class to
+								attend
+								thanks
+								to
+								their flexible schedule.</p>
+							<footer class="blockquote-footer">Sara
+								Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
+						</blockquote>
 					</div>
 				</div>
-				<div class="card-deck">
-					<div class="card">
-						<img src="https://images.unsplash.com/photo-1549540807-9442299306da?ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 1">
-						<div class="card-body">
-							<blockquote class="blockquote">
-								<p class="card-text">Infinity Studio is the best! I can always find a class to attend
-									thanks
-									to
-									their flexible schedule.</p>
-								<footer class="blockquote-footer">Sara
-									Solar<br><cite title="Source Title">Infinity Studio Member</cite></footer>
-							</blockquote>
-						</div>
-					</div>
 
-					<div class="card">
-						<img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
-						<div class="card-body">
-							<blockquote class="blockquote">
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-									posuere
-									erat a ante.</p>
-								<footer class="blockquote-footer">Someone famous in
-									<cite title="Source Title">Source Title</cite></footer>
-							</blockquote>
-						</div>
-					</div>
-
-					<div class="card">
-						<img src="https://images.unsplash.com/photo-1516526995003-435ccce2be97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 3">
-						<div class="card-body">
-							<blockquote class="blockquote">
-								<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
-									posuere
-									erat a ante.</p>
-								<footer class="blockquote-footer">Someone famous in
-									<cite title="Source Title">Source Title</cite></footer>
-							</blockquote>
-						</div>
+				<div class="card">
+					<img src="https://images.unsplash.com/photo-1549540952-f1a0ff6d3e74?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 2">
+					<div class="card-body">
+						<blockquote class="blockquote">
+							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+								posuere
+								erat a ante.</p>
+							<footer class="blockquote-footer">Someone famous in
+								<cite title="Source Title">Source Title</cite></footer>
+						</blockquote>
 					</div>
 				</div>
-			</section>
-			<!-- .quotes-->
-            </div>
-            <br>
 
-<!-- marketing feature -->
-			
+				<div class="card">
+					<img src="https://images.unsplash.com/photo-1516526995003-435ccce2be97?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80" class="card-img-top" alt="User Story 3">
+					<div class="card-body">
+						<blockquote class="blockquote">
+							<p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer
+								posuere
+								erat a ante.</p>
+							<footer class="blockquote-footer">Someone famous in
+								<cite title="Source Title">Source Title</cite></footer>
+						</blockquote>
+					</div>
+				</div>
+			</div>
+		</section>
+		<!-- .quotes-->
+	</div>
+	<br>
+	<!-- marketing feature -->
+
 
 
 	<!-- Optional JavaScript -->
